[workspace]
members = ["cita-auth"
,"cita-jsonrpc"
,"cita-chain"
,"cita-bft"
,"cita-network"
,"cita-executor"
,"cita-forever"
,"tools/create_key_addr"
,"tools/snapshot_tool"
,"tools/relayer-parser"
,"tests/chain-executor-mock"
,"tests/consensus-mock"
,"tests/chain_performance_by_mq"
,"tests/box_executor"
,"tests/vm_test"
,"tests/state_test"
]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
