[workspace]
members = ["cita-auth"
,"cita-jsonrpc"
,"cita-chain"
,"cita-bft"
,"cita-network"
,"cita-executor"
,"cita-forever"
,"tools/create-key-addr"
,"tools/create-genesis"
,"tests/chain-executor-mock"
]

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
