[package]
name = "auth"
version = "0.1.0"
authors = ["rink1969 <rink1969@cryptape.com>"]

[dependencies]
clap = "2"
log = "0.3"
dotenv = "0.10.0"
cpuprofiler = "0.0.3"
threadpool = "1.7.0"
rustc-serialize = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
util = { path = "../share_libs/util"}
error = { path = "../share_libs/error"}
pubsub = { path = "../share_libs/pubsub" }
logger = { path = "../share_libs/logger" }
libproto = { path = "../share_libs/proto" }
protobuf = { version = "^1.0.0"}
cita-crypto = { path = "../share_libs/crypto"}
tx_pool = {path = "../share_libs/tx_pool"}
core = { path = "../chain/core" }
uuid = { version = "0.4", features = ["v4"] }
clippy = {version = "0.0.148", optional = true}
