[package]
name = "auth"
version = "0.1.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
clap = "2"
log = "0.3"
dotenv = "0.10.0"
cpuprofiler = "0.0.3"
threadpool = "1.7.0"
rustc-serialize = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
util = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
error = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
pubsub = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
logger = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
protobuf = { version = "^1.0.0"}
cita-crypto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
tx_pool = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
core = { path = "../chain/core" }
uuid = { version = "0.4", features = ["v4"] }
clippy = {version = "0.0.175", optional = true}
