[package]
description = "CITA node."
name = "chain"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
dotenv = "0.10.0"
threadpool = "1.7.0"
protobuf = { version = "^1.0.0"}
log = "0.3.0"
clap = "2"
byteorder = { version = "1", default-features = false }
serde_json = "1.0"
libproto = {path = "../share_libs/proto"}
pubsub = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "11e8929" }
util = { path = "../share_libs/util" }
error = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "191fdee" }
logger = { git = "https://github.com/cryptape/cita-sharelibs.git", rev = "056d5bd" }
jsonrpc_types = { path = "../jsonrpc/types" }
core = { path = "./core" }
common-types = { path = "./types" }
proof = { path = "../consensus/proof" }
clippy = {version = "0.0.175", optional = true}

[[bin]]
path = "main.rs"
name = "chain"

[features]
dev = ["clippy"]
