[package]
description = "CITA node."
name = "chain"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
dotenv = "0.10.0"
threadpool = "1.7.0"
protobuf = { version = "^1.0.0"}
log = "0.3.0"
clap = "2"
byteorder = { version = "1", default-features = false }
serde_json = "1.0"
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
pubsub = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
util = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
error = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
logger = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
jsonrpc_types = { path = "../jsonrpc/types" }
core = { path = "./core" }
common-types = { path = "./types" }
proof = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
clippy = {version = "0.0.175", optional = true}

[[bin]]
path = "main.rs"
name = "chain"

[features]
dev = ["clippy"]
