[package]
name = "cita-auth"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
clap = "2"
dotenv = "0.13.0"
cpuprofiler = "0.0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cita-logger = "0.1.0"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-directories = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
error = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-crypto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
tx_pool = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
uuid = { version = "0.7", features = ["v4"] }
lru = "0.1"
rayon = "1.0"
hashable = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-database = { git = "https://github.com/cryptape/cita-database.git", branch = "develop" }

[dev-dependencies]
tempfile = "2"
tempdir = "0.3.7"
quickcheck = "0.7.2"

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["cita-crypto/secp256k1", "libproto/secp256k1", "tx_pool/secp256k1"]
ed25519 = ["cita-crypto/ed25519", "libproto/ed25519", "tx_pool/ed25519"]
sm2 = ["cita-crypto/sm2", "libproto/sm2", "tx_pool/sm2"]
sha3hash = ["libproto/sha3hash", "tx_pool/sha3hash"]
blake2bhash = ["libproto/blake2bhash", "tx_pool/blake2bhash"]
sm3hash = ["libproto/sm3hash", "tx_pool/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
