[package]
description = "CITA node."
name = "cita-chain"
version = "0.6.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
dotenv = "0.13.0"
clap = "2"
serde_json = "1.0"
cita-logger = "0.1.0"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita-directories = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
error = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
core = { path = "./core" }
common-types = { path = "./types" }
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
cita_db = { git = "https://github.com/cryptape/cita-database.git", branch = "develop", package = "cita-database" }

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["libproto/ed25519", "proof/ed25519"]
sm2 = ["libproto/sm2", "proof/sm2"]
sha3hash = ["libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["libproto/sm3hash", "proof/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
