[package]
description = "CITA node."
name = "cita-chain"
version = "1.1.0"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
dotenv = "0.13.0"
clap = "2"
serde_json = "1.0"
cita-logger = "0.1.1"
cita-types = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
libproto = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
pubsub = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
cita-directories = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
cita-crypto = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
util = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
error = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
jsonrpc-types = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
core = { path = "./core" }
common-types = { path = "./types" }
proof = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }
cita_db = { version = "0.1", package = "cita-database" }
license = { path = "./license" }

[build-dependencies]
util = { git = "ssh://git.rivtower.com/cita/cita-common.git", branch = "develop" }

[build-dependencies.config_struct]
version = "~0.3.0"
features = ["toml-parsing"]

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["libproto/ed25519", "proof/ed25519"]
sm2 = ["libproto/sm2", "proof/sm2"]
sha3hash = ["libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["libproto/sm3hash", "proof/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
