[package]
name = "cita-jsonrpc"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
futures = "0.1"
threadpool = "1.7.0"
num_cpus = "1"
uuid = { version = "0.4", features = ["v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cpuprofiler = "0.0.3"
dotenv = "0.10.0"
clap = "2"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "gasUsed2quotaUsed" }
error = { git = "https://github.com/cryptape/cita-common.git", branch = "gasUsed2quotaUsed" }
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "gasUsed2quotaUsed" }
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "gasUsed2quotaUsed" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "gasUsed2quotaUsed" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "gasUsed2quotaUsed" }
http = "0.1"
httparse = "1.0"
bytes = "0.4"
time = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
ws = "0.7"
hyper = { git = "https://github.com/cryptape/hyper.git", branch = "reuse_port" }
net2 = "0.2"
unicase = "2.1.0"
libc = "0.2"

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "gasUsed2quotaUsed" }

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1", "jsonrpc-types/secp256k1"]
ed25519 = ["libproto/ed25519", "jsonrpc-types/ed25519"]
sm2 = ["libproto/sm2", "jsonrpc-types/sm2"]
sha3hash = ["util/sha3hash", "libproto/sha3hash", "jsonrpc-types/sha3hash"]
blake2bhash = ["util/blake2bhash", "libproto/blake2bhash", "jsonrpc-types/blake2bhash"]
sm3hash = ["util/sm3hash", "libproto/sm3hash", "jsonrpc-types/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
