[package]
name = "cita-jsonrpc"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
futures = "0.1"
threadpool = "1.7.0"
num_cpus = "1"
uuid = { version = "0.7", features = ["v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
cpuprofiler = "0.0.3"
dotenv = "0.13.0"
clap = "2"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }
error = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }
jsonrpc-proto = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }
http = "0.1"
httparse = "1.0"
bytes = "0.4"
time = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-timer = "0.2"
ws = "0.7"
hyper = "0.12"
net2 = "0.2"
unicase = "2.1.0"
libc = "0.2"
tokio = "0.1.13"
tokio-executor = "0.1.5"

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "v0.21.1" }

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1", "jsonrpc-proto/secp256k1"]
ed25519 = ["libproto/ed25519", "jsonrpc-proto/ed25519"]
sm2 = ["libproto/sm2", "jsonrpc-proto/sm2"]
sha3hash = ["libproto/sha3hash", "jsonrpc-proto/sha3hash"]
blake2bhash = ["libproto/blake2bhash", "jsonrpc-proto/blake2bhash"]
sm3hash = ["libproto/sm3hash", "jsonrpc-proto/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
