[package]
name = "cita-network"
version = "0.6.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"

[dependencies]
tentacle-discovery = "0.2.5"
tentacle = "0.2.3"
tokio = "0.1.14"
futures = "0.1.25"
cita-logger = "0.1.0"
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
jsonrpc-types = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }
serde = "1.0.84"
serde_json = "1.0"
serde_derive = "1.0.84"
clap = "2.32"
bytes = "0.4"
byteorder = "1.3"
rand = "0.4.5"
dotenv = "0.13.0"
fnv = "1.0.6"
notify = "4.0.10"

[dev-dependencies]
tempfile = "3.0.5"

[build-dependencies]
util = { git = "https://github.com/cryptape/cita-common.git", branch = "remove-gpl" }

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1"]
ed25519 = ["libproto/ed25519"]
sm2 = ["libproto/sm2"]
sha3hash = ["libproto/sha3hash"]
blake2bhash = ["libproto/blake2bhash"]
sm3hash = ["libproto/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
