[package]
name = "jsonrpc"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
hyper = "0.10"
ws = "0.7"
threadpool = "1.7.0"
num_cpus = "1.6.2"
uuid = { version = "0.4", features = ["v4"] }
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
protobuf = { version = "^1.0.0" }
log = "0.3"
util = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
error = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pubsub = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cpuprofiler = "0.0.3"
jsonrpc_types = { path = "types" }
dotenv = "0.10.0"
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
clap = "2"
clippy = {version = "0.0.175", optional = true}

[[bin]]
name = "jsonrpc"
path = "src/main.rs"

[features]
default = ["secp256k1", "sha3hash", "rabbitmq"]
secp256k1 = ["libproto/secp256k1"]
ed25519 = ["libproto/ed25519"]
sm2 = ["libproto/sm2"]
sha3hash = ["util/sha3hash", "libproto/sha3hash"]
blake2bhash = ["util/blake2bhash", "libproto/blake2bhash"]
sm3hash = ["util/sm3hash", "libproto/sm3hash"]
rabbitmq = ["pubsub/rabbitmq"]
zeromq = ["pubsub/zeromq"]
kafka = ["pubsub/kafka"]
