[package]
name = "jsonrpc_types"
version = "0.1.0"
authors = ["Cryptape Technologies <contact@cryptape.com>"]

[dependencies]
bincode = "0.8"
libproto = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
uuid = { version = "0.5", features = ["v4"] }
logger = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-serialize = "0.3"
proof = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
cita-types = { git = "https://github.com/cryptape/cita-common.git", branch = "develop" }
jsonrpc-types-internals = { path = "internals" }

[features]
default = ["secp256k1", "sha3hash"]
secp256k1 = ["libproto/secp256k1", "proof/secp256k1"]
ed25519 = ["libproto/ed25519", "proof/ed25519"]
sm2 = ["libproto/sm2", "proof/sm2"]
sha3hash = ["libproto/sha3hash", "proof/sha3hash"]
blake2bhash = ["libproto/blake2bhash", "proof/blake2bhash"]
sm3hash = ["libproto/sm3hash", "proof/sm3hash"]
