[package]
name = "network"
version = "0.6.0"
authors = ["Cryptape Technologies <arch@cryptape.com>"]

[dependencies]
clap = "2"
toml = "0.2"
rustc-serialize = "0.3"
futures = "0.1"
futures-cpupool = "0.1"
tokio-io = "0.1"
byteorder = "1.0.0"
tokio-proto = "0.1"
tokio-service = "0.1"
log = "0.3"
dotenv = "0.10.0"
bytes = "0.4"
notify = "4.0.0"
libproto = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
protobuf = { version = "^1.0.0"}
util = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
pubsub = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
logger = { git = "https://github.com/cryptape/cita-sharelibs.git", branch = "develop" }
rand = "0.3.*"
clippy = {version = "0.0.175", optional = true}

[features]
default = []
